<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="101"
        android:title="@string/favourite" />

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_movies"
        android:orderInCategory="102"
        android:title="@string/home" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_magnifier"
        android:orderInCategory="102"
        android:title="@string/search" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="102"
        android:title="@string/settings" />
</menu>