<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_consent_dialog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_6sdp">

    <ScrollView
        android:id="@+id/consentForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/consent_info_1"
                android:textAlignment="center"
                android:textSize="@dimen/_12ssp"
                app:fontFamily="@font/proxima_nova_alt_bold" />

            <TextView
                android:id="@+id/main_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:textSize="@dimen/_12ssp"
                tools:text="@string/main_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/consent_info_2"
                android:textAlignment="center"
                android:textSize="@dimen/_13ssp"
                app:fontFamily="@font/proxima_nova_alt_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6sdp"
                android:text="@string/consent_info_3"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/shape_btn_orange"
                android:text="Yes, I Agree"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnDisagree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="No, Thank You"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:text="@string/footer_text"
                android:textAlignment="center"
                android:textColor="#bdbdbd"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/consentInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        android:visibility="gone">

        <TextView
            android:id="@+id/servicesText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_6sdp"
            android:textSize="@dimen/_12ssp"
            tools:text="@string/third_party_services" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/secondary_dark"
            android:backgroundTint="@color/secondary_dark"
            android:text="Back"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>