<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="@dimen/_12sdp"
    android:paddingTop="@dimen/_12sdp"
    android:paddingRight="@dimen/_12sdp"
    tools:context=".fragment.HomeFragment">

    <com.agrawalsuneet.dotsloader.loaders.TrailingCircularDotsLoader
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:trailingcircular_animDelay="200"
        app:trailingcircular_animDuration="1200"
        app:trailingcircular_bigCircleRadius="@dimen/_30sdp"
        app:trailingcircular_dotsColor="@color/secondary_dark"
        app:trailingcircular_dotsRadius="@dimen/_6sdp"
        app:trailingcircular_noOfTrailingDots="5" />

    <ScrollView
        android:id="@+id/movieContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/movieCategoryList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_4sdp">

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/imageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="top|end"
                    app:sliderIndicatorMargin="@dimen/_8sdp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="@dimen/_2sdp"
                    app:sliderIndicatorRadius="@dimen/_2sdp"
                    app:sliderIndicatorSelectedColor="@color/white"
                    app:sliderIndicatorUnselectedColor="@color/dot_inactive"
                    app:sliderScrollTimeInSec="4"
                    app:sliderStartAutoCycle="true" />
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <View
                    android:id="@+id/horizontalLine1"
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/horizontalLine1"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/tv_channels"
                    android:textSize="@dimen/_14ssp" />
            </RelativeLayout>

            <GridView
                android:id="@+id/gvChannelType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:numColumns="3"
                android:stretchMode="columnWidth" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <View
                    android:id="@+id/horizontalLine2"
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/horizontalLine2"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/upcoming_movies"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/btnUpcomingMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/view_all"
                    android:textColor="@color/secondary_dark"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <View
                    android:id="@+id/horizontalLine3"
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/horizontalLine3"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/top_rated_movies"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/btnTopRatedMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/view_all"
                    android:textColor="@color/secondary_dark"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTopRatedMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <View
                    android:id="@+id/horizontalLine4"
                    android:layout_width="@dimen/_4sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/horizontalLine4"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/popular_movies"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/btnPopularMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/proxima_nova_alt_bold"
                    android:text="@string/view_all"
                    android:textColor="@color/secondary_dark"
                    android:textSize="@dimen/_12ssp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPopularMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>